@@ -1,4 +1,8 @@
 /**
+ * @defgroup CInterface C Interface 
+ **/
+
+/**
  * Orthanc - A Lightweight, RESTful DICOM Store
  * Copyright (C) 2012-2015 Sebastien Jodogne, Medical Physics
  * Department, University Hospital of Liege, Belgium
